<resources>
    <string name="app_name">Conversor de unidades</string>
    <string name="menu">Menu</string>
    <string name="settings">Configurações</string>
    <string name="edit">Editar</string>
    <string name="search_units">Pesquisa unidades</string>
    <string name="temperature">Temperatura</string>
    <string name="weight">Peso</string>
    <string name="distance">Distância</string>
    <string name="speed">Velocidade</string>
    <string name="time">Tempo</string>
    <string name="currency">Moeda</string>
    <string name="back">Voltar</string>
</resources>